actually hide behind FF, fix time conversion bug, and convert visibility map to hidden map

--- a/frontend/src/scenes/funnels/Funnel.scss
+++ b/frontend/src/scenes/funnels/Funnel.scss
@@ -81,8 +81,14 @@
     }
 }
 
-.insights-graph-container {
+.insights-graph-container.funnels {
     .ant-card-body {
         padding: 0;
+    }
+
+    .graph-container {
+        // hacky because container not respecting position: relative;
+        width: calc(100% - 48px);
+        height: calc(100% - 48px);
     }
 }
