--- a/frontend/src/scenes/funnels/FunnelBarGraph.scss
+++ b/frontend/src/scenes/funnels/FunnelBarGraph.scss
@@ -7,6 +7,9 @@ $glyph_height: 22px;
 $funnel_canvas_background: #fafafa;
 
 .funnel-bar-graph {
+    background-color: $funnel_canvas_background;
+    min-height: 100%;
+
     .ant-popover {
         .ant-popover-content {
             background: #fafafa;
@@ -27,11 +30,6 @@ $funnel_canvas_background: #fafafa;
             background: #fafafa;
         }
     }
-
-    background-color: $funnel_canvas_background;
-    padding: 12px 24px;
-    border-top: 1px solid $border_light;
-    min-height: 100%;
 
     // Layout: horizontal bars
     .funnel-step {
